--- a/index.html
+++ b/index.html
@@ -19,8 +19,12 @@
                 <a href="#">
                     <img src="./img/hdchostlogo.png" alt="logo-Hdchost">
                 </a>
+                <a href="#">
+                    <img class="img-bar"src="./img/barra-de-menu (1).png" alt="menu">
+                </a>
                  
                 <ul>
+                    
                     <li><a href="#">home</a></li>
                     <li><a href="#">planos</a></li>
                     <li><a href="#">contato</a></li>
@@ -41,29 +45,31 @@
     <section id="beneficios">
         <div class="cont-beneficio">
 
-            <div class="beneficio1">
-                <img src="./img/escudo.png" alt="seguranca-icons">
-                <h2>seguranca</h2>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam imperdiet quis mi ut scelerisque. Phasellus et venenatis nulla, in fringilla arcu.
-                </p>
+            <div class="beneficio b1">
+                <ul>
+                    <li><img src="./img/escudo.png" alt="seguranca-icons"></li>
+                    <li><h2>seguranca</h2></li>
+                    <li><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam imperdiet quis mi ut scelerisque. Phasellus et venenatis nulla, in fringilla arcu.</p></li>
+                </ul>
             </div><!--beneficio1-->
 
-            <div class="beneficio1">
-                <img src="./img/lancamento-de-foguete-espacial.png" alt="seguranca-icons">
-                <h2>velocidade</h2>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam imperdiet quis mi ut scelerisque. Phasellus et venenatis nulla, in fringilla arcu.
-                </p>
+            <div class="beneficio b2">
+                <ul>
+                    <li><img src="./img/lancamento-de-foguete-espacial.png" alt="seguranca-icons"></li>
+                    <li><h2>Velocidade</h2></li>
+                    <li><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam imperdiet quis mi ut scelerisque. Phasellus et venenatis nulla, in fringilla arcu.</p></li>
+                </ul>
             </div><!--beneficio1-->
 
-            <div class="beneficio1">
-                <img src="./img/pergunta.png" alt="seguranca-icons">
-                <h2>Suporte</h2>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam imperdiet quis mi ut scelerisque. Phasellus et venenatis nulla, in fringilla arcu.
-                </p>
+            <div class="beneficio b3">
+                <ul>
+                    <li><img src="./img/pergunta.png" alt="seguranca-icons"></li>
+                    <li><h2>Suporte</h2></li>
+                    <li><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam imperdiet quis mi ut scelerisque. Phasellus et venenatis nulla, in fringilla arcu.</p></li>
+                </ul>
             </div><!--beneficio1-->
+
+
 
 
         </div><!--cont-beneficio-->
